#1 CustomUserAgentを定数化する

--- a/lambda/config.js.sample
+++ b/lambda/config.js.sample
@@ -10,6 +10,8 @@ const MESSAGE_CANCEL = '';
 const MESSAGE_FALLBACK = '';
 const MESSAGE_ERROR = '';
 
+const CUSTOM_USER_AGENT = '';
+
 module.exports = {
     END_POINT: END_POINT,
     GPT_AUTHORIZATION_TOKEN: GPT_AUTHORIZATION_TOKEN,
@@ -18,5 +20,6 @@ module.exports = {
     MESSAGE_HELP: MESSAGE_HELP,
     MESSAGE_CANCEL: MESSAGE_CANCEL,
     MESSAGE_FALLBACK: MESSAGE_FALLBACK,
-    MESSAGE_ERROR: MESSAGE_ERROR
+    MESSAGE_ERROR: MESSAGE_ERROR,
+    CUSTOM_USER_AGENT: CUSTOM_USER_AGENT
 };
